# tenet

./: .gitignore
asm/: .gitignore  fcopy.c  freplace.c
asm/2/: main.asm  string.inc  string.inc_
asm/4/fcopy/: Makefile  fcopy.asm  fcopy.c  lorem.txt  main.asm
asm/4/freplace/: Makefile  freplace.asm  main.asm  main.c  result.txt
asm/4/map/: Makefile  main.asm  map.asm  map.c
asm/4/str/: Makefile  main.asm  str.asm  str.c
emulator2/: template.vcxproj  template.vcxproj.filters  vm.c  vm.h  vm.sln
emulator2/asm/: code4.asm  code5.asm  vmasm.pm
lecture/: Makefile  meson.build
lecture/wiki/: lecture.wiki
mat/1/: main.c  meson.build
mat/1/src/: adj_list.c  adj_list.h  distance.c  distance.h  main.zig  meson.build  path.zig  tree.zig  types.zig
mat/1/test/: meson.build
mat/1cpp/: Makefile  main.cpp  meson.build
mat/1cpp/src/: meson.build  path.cpp  path.hpp  square_matrix.hpp
mat/2/: main.c  main.cpp  meson.build
mat/2/src/: adj_list.c  adj_list.h  algorithm.c  algorithm.h  disjoint_set.c  disjoint_set.h  disjoint_set.hpp  edge.c  edge.h  meson.build
mat/2/subprojects/: tribble
mat/2/test/: informative_test.c  meson.build
mat/3/: .clang-format  meson.build
mat/3/src/: adj_list.hpp  meson.build
mat/3/test/: test1.txt  test2.txt  test3.txt  test4.txt
mat/4/src/: adj_list.hpp  meson.build
mat/4/test/: test0.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
mat/5/: meson.build
mat/5/src/: hungarian.cpp  hungarian.hpp  matrix.hpp  meson.build
mat/5/subprojects/: octangle
mat/5/test/: 0.txt  out.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
mat/task1/src/: meson.build
mat/task2/: .gitignore  Gemfile  task2.gemspec
mat/task2/lib/: task2.rb
mat/task2/lib/task2/: algorithm.rb  disjoint_set.rb  edge.rb  parser.rb  square_matrix.rb  version.rb
msmk/: .gitignore  HW07_estimates.ipynb  HW11_basketball.ipynb  hw01_share_questions.ipynb  hw02_groceries.ipynb  hw05_simple_simulations.ipynb  hw06_miners_asy_int.ipynb  hw08_confidence_intervals.ipynb  hw09_hypotesis_task.ipynb  hw10_hypotesis_again.ipynb  hw_12_maxlik.ipynb
pm/1/: main.cpp  meson.build
pm/1/src/: meson.build  stack_arr.hpp  stack_list.hpp  stack_utils.hpp  strutils.cpp
pm/2/: Makefile  graph.dot  main.cpp  meson.build
pm/2/src/: graph.hpp  meson.build  t2func.cpp  t2func.hpp
pm/2/subprojects/: task1
pm/3/: Makefile  main.cpp  meson.build
pm/3.1/: Makefile  main.cpp  meson.build
pm/3.1/src/: meson.build
pm/3/src/: calculator.hpp  evaluator.cpp  evaluator.hpp  meson.build  parser.cpp  parser.hpp
pm/stack/: main.cpp  meson.build
pm/stack/src/: stack_arr.hpp  stack_utils.hpp
shares/: main.py
stack/: Makefile  main.cpp
stack/src/: meson.build  stack_list.hpp  stack_utils.hpp  strutils.hpp
